# BUSHIRI

./: .gitignore  README.md  cloudflare-band-market-opencode-plan.md  package.json  pnpm-lock.yaml
.codex/skills/todays-seafood/: SKILL.md
.codex/skills/todays-seafood/agents/: openai.yaml
apps/llm-pipeline/: README.md  pyproject.toml
apps/llm-pipeline/src/bushiri_llm_pipeline/: __init__.py  config.py  pipeline.py  schemas.py  server.py
apps/llm-pipeline/tests/: test_market_pipeline.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css  styles.test.ts
apps/worker/: package.json  tsconfig.json  wrangler.toml
apps/worker/migrations/: 0001_init.sql  0002_seed_aliases.sql  0003_seed_sources.sql  0004_add_band_page_sources.sql  0005_add_market_awards.sql  0006_add_market_awards_species_index.sql  0007_promote_golden_flounder_species.sql  0008_add_origin_country_detail.sql  0009_add_species_profiles.sql  0010_restore_golden_flounder_market_species.sql  0011_refine_species_profile_aliases.sql  0012_add_species_sort_orders.sql  0012_update_species_profile_weight_notes.sql  0013_update_species_profile_weight_taste_notes.sql  0014_add_discord_integration.sql
apps/worker/scripts/: registerDiscordCommands.mjs
apps/worker/src/: env.ts  index.ts
backups/: julpo-strike-soldout-backfill-20260505.sql  pre-awards-domestic-live-wild-20260505-014131.sqlite  pre-delete-category-cleanup-20260504-184514.sqlite  pre-market-awards-backfill-20260505-012136.sqlite
docs/: band-browser-manual-collection.md  llm-pipeline-official-docs.md
(+75 files in other folders)
